tests/ui/cycle-trait/pointee-sized-next-solver-ice.stderr
error[E0046]: not all trait items implemented, missing: `Undefined`
  --> $DIR/pointee-sized-next-solver-ice.rs:11:1
   |
LL |       type Undefined;
   |       -------------- `Undefined` from trait
...
LL | / impl PointeeSized for T
LL | |
LL | |
LL | | where
LL | |     <T as PointeeSized>::Undefined: PointeeSized,
   | |_________________________________________________^ missing `Undefined` in implementation

error[E0277]: the trait bound `T: PointeeSized` is not satisfied
  --> $DIR/pointee-sized-next-solver-ice.rs:15:5
   |
LL |     <T as PointeeSized>::Undefined: PointeeSized,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `PointeeSized` is not implemented for `T`
  --> $DIR/pointee-sized-next-solver-ice.rs:9:1
   |
LL | struct T;
   | ^^^^^^^^
help: the trait `PointeeSized` is implemented for `T`
  --> $DIR/pointee-sized-next-solver-ice.rs:11:1
   |
LL | / impl PointeeSized for T
LL | |
LL | |
LL | | where
LL | |     <T as PointeeSized>::Undefined: PointeeSized,
   | |_________________________________________________^
   = help: see issue #48214
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `T: PointeeSized` is not satisfied
  --> $DIR/pointee-sized-next-solver-ice.rs:11:23
   |
LL | impl PointeeSized for T
   |                       ^ unsatisfied trait bound
   |
help: the trait `PointeeSized` is not implemented for `T`
  --> $DIR/pointee-sized-next-solver-ice.rs:9:1
   |
LL | struct T;
   | ^^^^^^^^
help: the trait `PointeeSized` is implemented for `T`
  --> $DIR/pointee-sized-next-solver-ice.rs:11:1
   |
LL | / impl PointeeSized for T
LL | |
LL | |
LL | | where
LL | |     <T as PointeeSized>::Undefined: PointeeSized,
   | |_________________________________________________^

error[E0277]: the trait bound `T: PointeeSized` is not satisfied
  --> $DIR/pointee-sized-next-solver-ice.rs:15:37
   |
LL |     <T as PointeeSized>::Undefined: PointeeSized,
   |                                     ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `PointeeSized` is not implemented for `T`
  --> $DIR/pointee-sized-next-solver-ice.rs:9:1
   |
LL | struct T;
   | ^^^^^^^^
help: the trait `PointeeSized` is implemented for `T`
  --> $DIR/pointee-sized-next-solver-ice.rs:11:1
   |
LL | / impl PointeeSized for T
LL | |
LL | |
LL | | where
LL | |     <T as PointeeSized>::Undefined: PointeeSized,
   | |_________________________________________________^
note: required by a bound in `PointeeSized`
  --> $DIR/pointee-sized-next-solver-ice.rs:5:1
   |
LL | / trait PointeeSized {
LL | |     type Undefined;
LL | | }
   | |_^ required by this bound in `PointeeSized`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0046, E0277.
For more information about an error, try `rustc --explain E0046`.
